# icp-fascinate-internet-world

./: .gitignore  README.md  icp.drawio
dev-ic-streaminghub/: .gitignore  README_dev.md  README_prd.md  docker-compose.yml  postCommand.sh
dev-ic-streaminghub/.devcontainer/: devcontainer.json
dev-ic-streaminghub/streamingservice/: README.md  dfx.json  package-lock.json  package.json
dev-ic-streaminghub/streamingservice/src/streamingservice_manager/: Cargo.toml
dev-ic-streaminghub/streamingservice/src/streamingservice_manager/src/: lib.rs
dev-icp-hackathon/: .gitignore  Dockerfile  README.md  README_dev.md  README_ui.md  docker-compose.yml  postCommand.sh
dev-icp-hackathon/.devcontainer/: devcontainer.json
dev-icp-hackathon/docs/: README.md
dev-icp-hackathon/icpassproj/: Cargo.toml  README.md  canister_ids.json  dfx.json  icpass.xcf  package-lock.json  package.json
dev-icp-hackathon/mng_canister/: README.md  dfx.json  wasm_hex_canister_backend.txt
dev-icp-hackathon/mng_canister_rust/: Cargo.toml  README.md  dfx.json
dev-icp-hackathon/mng_canister_rust/src/mng_can_backend/: Cargo.toml  mng_can_backend.did
dev-icp-hackathon/mng_canister_rust/src/mng_can_backend/src/: lib.rs
dev-icp-hackathon/streamingservice/: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json  tsconfig.json
wave01/: README.md
wave02/: README.md
wave03/dev-icp-hackathon/: .gitignore  Dockerfile  README.md  README_concept.md  README_dfx.md  README_prd.md  README_production.md  README_ui.md  docker-compose.yml  postCommand.sh  postCommandDfx.sh  (+1 more)
(+115 files in other folders)
