[package]
name = "mng_can_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
candid = "0.10.13"
serde = "1.0.219"
serde_bytes = "0.11.17"
serde_json = "1.0.140"

